--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tải lên tệp CSV</title>
+    <title>Upload CSV file</title>
   </head>
   <body>
-    <h1>Tải lên tệp CSV</h1>
+    <h1>Upload CSV file</h1>
     <form
       action="http://127.0.0.1:8000/upload/"
       method="post"
       enctype="multipart/form-data"
     >
-      <label for="file">Chọn tệp CSV:</label>
+      <label for="file">Upload CSV file:</label>
       <input type="file" name="file" id="file" accept=".csv" required />
       <br /><br />
-      <input type="submit" value="Tải lên" />
+      <input type="submit" value="Upload" />
     </form>
   </body>
 </html>
